--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@outgrow/reaction-dummy-data",
-  "description": "Utility functions for the Reaction API",
+  "description": "Generates dummy data for Reaction Commerce",
   "version": "0.1.0",
   "main": "index.js",
   "type": "module",
@@ -30,10 +30,9 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@reactioncommerce/api-utils": "^1.7.0",
+    "@reactioncommerce/api-utils": "^1.7.2",
     "@reactioncommerce/file-collections": "^0.7.3",
-    "@reactioncommerce/logger": "^1.1.2",
-    "@reactioncommerce/random": "^1.0.1",
+    "@reactioncommerce/logger": "^1.1.3",
     "@reactioncommerce/reaction-error": "^1.0.1",
     "graphql": "^14.5.8",
     "graphql-fields": "^2.0.3",
