--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@outgrowio/reaction-dummy-data",
   "description": "Generates dummy data for Reaction Commerce",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "index.js",
   "type": "module",
   "homepage": "https://github.com/outgrow/reaction-dummy-data",
@@ -34,14 +34,14 @@
     "@reactioncommerce/file-collections": "^0.7.3",
     "@reactioncommerce/logger": "^1.1.3",
     "@reactioncommerce/reaction-error": "^1.0.1",
+    "buffer-stream-reader": "^0.1.1",
+    "faker": "^4.1.0",
     "graphql": "^14.5.8",
     "graphql-fields": "^2.0.3",
     "graphql-relay": "^0.6.0",
-    "buffer-stream-reader": "^0.1.1",
     "jpeg-js": "^0.3.3",
     "node-fetch": "^2.3.0",
-    "random-puppy": "^1.1.0",
-    "faker": "^4.1.0"
+    "random-puppy": "^1.1.0"
   },
   "devDependencies": {
     "@reactioncommerce/eslint-config": "^2.1.0",
